--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,13 @@
 
     <dependencies>
 
+        <!-- 通用公共 -->
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.0.1</version>
+        </dependency>
+
         <!-- 基础servlet -->
         <dependency>
             <groupId>javax.servlet</groupId>
@@ -32,6 +39,12 @@
             <groupId>org.mybatis</groupId>
             <artifactId>mybatis</artifactId>
             <version>3.2.8</version>
+        </dependency>
+
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.34</version>
         </dependency>
 
         <dependency>
