--- a/pom.xml
+++ b/pom.xml
@@ -9,18 +9,19 @@
     <version>1.0-SNAPSHOT</version>
 
     <name>doukit-web</name>
-    <url>http://maven.apache.org</url>
+    <url>http://www.doukit.com</url>
 
     <properties>
         <spring.version>4.1.1.RELEASE</spring.version>
         <freemarker.version>2.3.20</freemarker.version>
         <junit.version>3.8.1</junit.version>
+        <mybatis.version>3.2.8</mybatis.version>
         <env>qa</env>
     </properties>
 
     <dependencies>
 
-        <!-- 通用公共 -->
+        <!-- 通用公共组件 -->
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
@@ -38,7 +39,7 @@
         <dependency>
             <groupId>org.mybatis</groupId>
             <artifactId>mybatis</artifactId>
-            <version>3.2.8</version>
+            <version>${mybatis.version}</version>
         </dependency>
 
         <dependency>
