--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,12 @@
             <version>2.0.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.1</version>
+        </dependency>
+
         <!-- 基础servlet -->
         <dependency>
             <groupId>javax.servlet</groupId>
