--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -23,11 +23,8 @@
     <!-- Do not filter Static Resources -->
     <servlet-mapping>
         <servlet-name>default</servlet-name>
-        <url-pattern>/resources/*</url-pattern>
-        <url-pattern>/bootstrap/*</url-pattern>
-        <url-pattern>/jquery/*</url-pattern>
-        <url-pattern>/chosen/*</url-pattern>
-        <url-pattern>/files/*</url-pattern>
+        <url-pattern>/amazeui/*</url-pattern>
+        <url-pattern>/assets/*</url-pattern>
     </servlet-mapping>
 
     <!-- DispatcherServlet Config -->
